--- a/package.json
+++ b/package.json
@@ -1,14 +1,27 @@
 {
-  "name": "maya-weekend-heallth-interview",
-  "version": "1.0.0",
-  "description": "weekend health takehome challenge",
-  "main": "index.ts",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Maya Li",
-  "license": "ISC",
-  "devDependencies": {
-    "typescript": "^5.4.5"
-  }
+    "name": "maya-weekend-heallth-interview",
+    "version": "1.0.0",
+    "description": "weekend health takehome challenge",
+    "main": "src/index.ts",
+    "scripts": {
+        "app": "ts-node src/index.ts",
+        "test": "tsc --noEmit && node --import tsx --test src/**/*.test.ts",
+        "prettier": "prettier --write ./src/**/*.ts"
+    },
+    "author": "Maya Li",
+    "license": "ISC",
+    "devDependencies": {
+        "@types/node": "^20.10.4",
+        "typescript": "^5.4.5",
+        "@types/yargs": "^17.0.32",
+        "@typescript-eslint/eslint-plugin": "^6.13.2",
+        "@typescript-eslint/parser": "^6.13.2",
+        "eslint": "^8.55.0",
+        "prettier": "^3.1.0",
+        "ts-node": "^10.9.1",
+        "tsx": "^4.9.3"
+    },
+    "dependencies": {
+        "yargs": "^17.7.2"
+    }
 }
