add soultion, test and readme

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "src/index.ts",
     "scripts": {
         "app": "ts-node src/index.ts",
-        "test": "tsc --noEmit && node --import tsx --test src/**/*.test.ts",
+        "test": "tsc --noEmit && node --import tsx --test tests/**/*.test.ts",
         "prettier": "prettier --write ./src/**/*.ts"
     },
     "author": "Maya Li",
